# SimpleSerializationLib

./: README.md  meson.build
example/: SerializationExample.cpp
include/: Defines.h  IFileReaderBuilder.h  IFileWriterBuilder.h  Serializable.h  SerializationFileReaderBuilder.h  SerializationFileWriterBuilder.h
src/: SerializationFileReaderBuilder.cpp  SerializationFileWriterBuilder.cpp
