project('SimpleSerislizationLib','cpp')
projectFiles = files([
'include/Defines.h',
'include/IFileReaderBuilder.h',
'include/IFileWriterBuilder.h',
'include/Serializable.h',
'include/SerializationFileReaderBuilder.h',
'include/SerializationFileWriterBuilder.h',
'src/SerializationFileReaderBuilder.cpp',
'src/SerializationFileWriterBuilder.cpp'
])

shared_library('sserial',projectFiles)